--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,26 +11,27 @@ readme = "README.md"
 
 [dependencies]
 anyhow = "1.0"
-clap = { version = "4.5", features = ["derive"] }
+clap = { version = "4.5.47", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+bincode = { version = "2.0.1", features = ["serde"] }
 sha2 = "0.10"
 hex = "0.4"
 camino = "1.1"
 parking_lot = "0.12"
-time = { version = "0.3", features = ["formatting"] }
-reqwest = { version = "0.11", features = ["blocking", "json"] }
+time = { version = "0.3.43", features = ["formatting"] }
+reqwest = { version = "0.12", features = ["blocking", "json"] }
 semver = "1.0"
 flate2 = { version = "1.0" }
 tar = "0.4"
 base64 = "0.22"
 once_cell = "1.19"
-rand = "0.8"
-dirs = "5.0"
-thiserror = "1.0"
+rand = "0.9"
+dirs = "6.0"
+thiserror = "2.0.16"
 
 [dev-dependencies]
-tempfile = "3.10"
+tempfile = "3.22"
 assert_cmd = "2.0"
 predicates = "3.1"
 
