--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ anyhow = "1.0"
 clap = { version = "4.5.47", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 bincode = { version = "2.0.1", features = ["serde"] }
 sha2 = "0.10"
 hex = "0.4"
