--- a/example/pacm/package.json
+++ b/example/pacm/package.json
@@ -1,10 +1,4 @@
 {
   "name": "my-app",
-  "version": "0.1.0",
-  "dependencies": {
-    "express": "5.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "24.3.0"
-  }
+  "version": "0.1.0"
 }
