--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 bincode = { version = "2.0.1", features = ["serde"] }
+bincode1 = { package = "bincode", version = "1.3", optional = false }
 sha2 = "0.10"
 hex = "0.4"
 camino = "1.1"
@@ -30,6 +31,14 @@ once_cell = "1.19"
 rand = "0.9"
 dirs = "6.0"
 thiserror = "2.0.16"
+
+[[bin]]
+name = "pacm"
+path = "src/main.rs"
+
+[[bin]]
+name = "pacm-shim"
+path = "src/shim.rs"
 
 [dev-dependencies]
 tempfile = "3.22"
