--- a/example/pacm/package.json
+++ b/example/pacm/package.json
@@ -1,4 +1,9 @@
 {
   "name": "my-app",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "dependencies": {
+    "acorn": "8.15.0",
+    "chalk": "5.6.2",
+    "express": "5.1.0"
+  }
 }
