--- a/example/pacm/package.json
+++ b/example/pacm/package.json
@@ -2,8 +2,15 @@
   "name": "my-app",
   "version": "0.1.0",
   "dependencies": {
-    "acorn": "8.15.0",
-    "chalk": "5.6.2",
-    "express": "5.1.0"
+    "acorn": "8.15.0"
+  },
+  "devDependencies": {
+    "typescript": "5.9.3"
+  },
+  "optionalDependencies": {
+    "fsevents": "2.3.3"
+  },
+  "peerDependencies": {
+    "react-dom": "18.2.0"
   }
 }
