--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ hex = "0.4"
 camino = "1.1"
 parking_lot = "0.12"
 time = { version = "0.3.43", features = ["formatting"] }
-reqwest = { version = "0.12", features = ["blocking", "json"] }
+reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
 semver = "1.0"
 flate2 = { version = "1.0" }
 tar = "0.4"
