--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,13 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
+            packages: ""
           - os: windows-latest
             target: x86_64-pc-windows-msvc
+            packages: ""
           - os: macos-latest
             target: x86_64-apple-darwin
+            packages: ""
 
     steps:
     - name: Checkout code
@@ -55,28 +58,40 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
+            packages: ""
           - os: windows-latest
             target: x86_64-pc-windows-msvc
+            packages: ""
           - os: macos-latest
             target: x86_64-apple-darwin
+            packages: ""
           - os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
+            packages: gcc-aarch64-linux-gnu
           - os: ubuntu-latest
             target: arm-unknown-linux-gnueabihf
+            packages: gcc-arm-linux-gnueabihf
           - os: ubuntu-latest
             target: i686-unknown-linux-gnu
+            packages: gcc-multilib
           - os: windows-latest
             target: i686-pc-windows-msvc
+            packages: ""
           - os: ubuntu-latest
             target: x86_64-unknown-linux-musl
+            packages: musl-tools
           - os: ubuntu-latest
             target: aarch64-unknown-linux-musl
+            packages: ""
           - os: macos-latest
             target: aarch64-apple-darwin
+            packages: ""
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
@@ -85,6 +100,10 @@ jobs:
 
     - name: Cache dependencies
       uses: Swatinem/rust-cache@v2
+
+    - name: Install cross toolchains
+      if: runner.os == 'Linux' && matrix.packages != ''
+      run: sudo apt-get update && sudo apt-get install -y ${{ matrix.packages }}
 
     - name: Build release
       run: cargo build --release --target ${{ matrix.target }}
