--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,12 +19,15 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             packages: ""
+            use_cross: false
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             packages: ""
+            use_cross: false
           - os: macos-latest
             target: x86_64-apple-darwin
             packages: ""
+            use_cross: false
 
     steps:
     - name: Checkout code
@@ -68,24 +71,31 @@ jobs:
           - os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
             packages: gcc-aarch64-linux-gnu
+            use_cross: false
           - os: ubuntu-latest
             target: arm-unknown-linux-gnueabihf
             packages: gcc-arm-linux-gnueabihf
+            use_cross: false
           - os: ubuntu-latest
             target: i686-unknown-linux-gnu
             packages: gcc-multilib
+            use_cross: false
           - os: windows-latest
             target: i686-pc-windows-msvc
             packages: ""
+            use_cross: false
           - os: ubuntu-latest
             target: x86_64-unknown-linux-musl
-            packages: musl-tools
+            packages: ""
+            use_cross: true
           - os: ubuntu-latest
             target: aarch64-unknown-linux-musl
             packages: ""
+            use_cross: true
           - os: macos-latest
             target: aarch64-apple-darwin
             packages: ""
+            use_cross: false
 
     steps:
     - name: Checkout code
@@ -105,7 +115,16 @@ jobs:
       if: runner.os == 'Linux' && matrix.packages != ''
       run: sudo apt-get update && sudo apt-get install -y ${{ matrix.packages }}
 
-    - name: Build release
+    - name: Install cross
+      if: matrix.use_cross == 'true'
+      run: cargo install cross --locked
+
+    - name: Build release (cross)
+      if: matrix.use_cross == 'true'
+      run: cross build --release --target ${{ matrix.target }}
+
+    - name: Build release (cargo)
+      if: matrix.use_cross != 'true'
       run: cargo build --release --target ${{ matrix.target }}
 
     - name: Upload artifacts
