--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,12 +62,15 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             packages: ""
+            use_cross: false
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             packages: ""
+            use_cross: false
           - os: macos-latest
             target: x86_64-apple-darwin
             packages: ""
+            use_cross: false
           - os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
             packages: gcc-aarch64-linux-gnu
@@ -116,15 +119,15 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y ${{ matrix.packages }}
 
     - name: Install cross
-      if: matrix.use_cross == 'true'
+      if: ${{ matrix.use_cross }}
       run: cargo install cross --locked
 
     - name: Build release (cross)
-      if: matrix.use_cross == 'true'
+      if: ${{ matrix.use_cross }}
       run: cross build --release --target ${{ matrix.target }}
 
     - name: Build release (cargo)
-      if: matrix.use_cross != 'true'
+      if: ${{ !matrix.use_cross }}
       run: cargo build --release --target ${{ matrix.target }}
 
     - name: Upload artifacts
