--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,14 +20,20 @@ jobs:
             target: x86_64-unknown-linux-gnu
             packages: ""
             use_cross: false
+            linker: ""
+            linker_env: ""
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             packages: ""
             use_cross: false
+            linker: ""
+            linker_env: ""
           - os: macos-latest
             target: x86_64-apple-darwin
             packages: ""
             use_cross: false
+            linker: ""
+            linker_env: ""
 
     steps:
     - name: Checkout code
@@ -75,30 +81,44 @@ jobs:
             target: aarch64-unknown-linux-gnu
             packages: gcc-aarch64-linux-gnu
             use_cross: false
+            linker: aarch64-linux-gnu-gcc
+            linker_env: CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER
           - os: ubuntu-latest
             target: arm-unknown-linux-gnueabihf
             packages: gcc-arm-linux-gnueabihf
             use_cross: false
+            linker: arm-linux-gnueabihf-gcc
+            linker_env: CARGO_TARGET_ARM_UNKNOWN_LINUX_GNUEABIHF_LINKER
           - os: ubuntu-latest
             target: i686-unknown-linux-gnu
             packages: gcc-multilib
             use_cross: false
+            linker: ""
+            linker_env: ""
           - os: windows-latest
             target: i686-pc-windows-msvc
             packages: ""
             use_cross: false
+            linker: ""
+            linker_env: ""
           - os: ubuntu-latest
             target: x86_64-unknown-linux-musl
             packages: ""
             use_cross: true
+            linker: ""
+            linker_env: ""
           - os: ubuntu-latest
             target: aarch64-unknown-linux-musl
             packages: ""
             use_cross: true
+            linker: ""
+            linker_env: ""
           - os: macos-latest
             target: aarch64-apple-darwin
             packages: ""
             use_cross: false
+            linker: ""
+            linker_env: ""
 
     steps:
     - name: Checkout code
@@ -117,6 +137,10 @@ jobs:
     - name: Install cross toolchains
       if: runner.os == 'Linux' && matrix.packages != ''
       run: sudo apt-get update && sudo apt-get install -y ${{ matrix.packages }}
+
+    - name: Configure linker
+      if: ${{ runner.os == 'Linux' && !matrix.use_cross && matrix.linker != '' }}
+      run: echo "${{ matrix.linker_env }}=${{ matrix.linker }}" >> $GITHUB_ENV
 
     - name: Install cross
       if: ${{ matrix.use_cross }}
