--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,9 +28,11 @@ flate2 = { version = "1.0" }
 tar = "0.4"
 base64 = "0.22"
 once_cell = "1.19"
-rand = "0.9"
 dirs = "6.0"
 thiserror = "2.0.16"
+walkdir = "2.5"
+data-encoding = "2.4"
+rayon = "1.10"
 
 [[bin]]
 name = "pacm"
