feat: add support for lifecycle scripts in package management
- Implemented functionality to read and execute lifecycle scripts (preinstall, install, postinstall) for packages during installation.
- Introduced a new command `scripts run` to allow users to run scripts for specific packages or all packages.
- Added a sidecar JSON file to cache package scripts for later execution.
- Enhanced error handling and user prompts for script execution.
- Updated metadata structures to include scripts and modified related functions to accommodate new features.
- Added tests to ensure proper execution of lifecycle scripts.

--- a/example/pacm/package.json
+++ b/example/pacm/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "dependencies": {
-    "acorn": "8.15.0"
+    "@lumixland/ffmpeg": "0.1.0",
+    "@lumixland/ffmpeg-binaries": "0.1.0"
   }
 }
