--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v6
+      uses: actions/checkout@v4
 
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
@@ -52,23 +52,23 @@ jobs:
       run: cargo build --release --target ${{ matrix.target }}
 
     - name: Upload artifacts
-      uses: actions/upload-artifact@v6
+      uses: actions/upload-artifact@v4
       with:
         name: pacm-${{ matrix.target }}
         path: target/${{ matrix.target }}/release/pacm*
 
-  create-release:
-    name: Create Release
+  upload-to-release:
+    name: Upload to Existing Release
     runs-on: ubuntu-latest
     needs: build-release
     permissions:
       contents: write
     steps:
     - name: Checkout code
-      uses: actions/checkout@v6
+      uses: actions/checkout@v4
 
     - name: Download all artifacts
-      uses: actions/download-artifact@v7
+      uses: actions/download-artifact@v4
       with:
         path: artifacts
 
@@ -76,17 +76,11 @@ jobs:
       run: |
         mkdir release-files
         find artifacts -name "pacm*" -type f -exec cp {} release-files/ \;
-        cp CHANGELOG.md release-files/
 
-    - name: Read changelog
-      id: changelog
-      run: echo "content<<EOF" >> $GITHUB_OUTPUT && cat CHANGELOG.md >> $GITHUB_OUTPUT && echo "EOF" >> $GITHUB_OUTPUT
-
-    - name: Create GitHub Release
+    - name: Upload Assets to Existing Release
       uses: softprops/action-gh-release@v2
       with:
+        tag_name: ${{ github.ref_name }}
         files: release-files/*
-        body: ${{ steps.changelog.outputs.content }}
-        generate_release_notes: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
