--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,24 +17,42 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
+            packages: ""
+            use_cross: false
           - os: windows-latest
             target: x86_64-pc-windows-msvc
+            use_cross: false
           - os: macos-latest
             target: x86_64-apple-darwin
+            use_cross: false
           - os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
+            packages: gcc-aarch64-linux-gnu
+            linker: aarch64-linux-gnu-gcc
+            linker_env: CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER
+            use_cross: false
           - os: ubuntu-latest
             target: arm-unknown-linux-gnueabihf
+            packages: gcc-arm-linux-gnueabihf
+            linker: arm-linux-gnueabihf-gcc
+            linker_env: CARGO_TARGET_ARM_UNKNOWN_LINUX_GNUEABIHF_LINKER
+            use_cross: false
           - os: ubuntu-latest
             target: i686-unknown-linux-gnu
+            packages: gcc-multilib
+            use_cross: false
           - os: windows-latest
             target: i686-pc-windows-msvc
+            use_cross: false
           - os: ubuntu-latest
             target: x86_64-unknown-linux-musl
+            use_cross: true
           - os: ubuntu-latest
             target: aarch64-unknown-linux-musl
+            use_cross: true
           - os: macos-latest
             target: aarch64-apple-darwin
+            use_cross: false
 
     steps:
     - name: Checkout code
@@ -48,14 +66,36 @@ jobs:
     - name: Cache dependencies
       uses: Swatinem/rust-cache@v2
 
-    - name: Build release
+    - name: Install cross toolchains
+      if: runner.os == 'Linux' && matrix.packages != ''
+      run: sudo apt-get update && sudo apt-get install -y ${{ matrix.packages }}
+
+    - name: Configure linker
+      if: ${{ runner.os == 'Linux' && !matrix.use_cross && matrix.linker != '' }}
+      run: echo "${{ matrix.linker_env }}=${{ matrix.linker }}" >> $GITHUB_ENV
+
+    - name: Install cross
+      if: ${{ matrix.use_cross }}
+      run: cargo install cross --locked
+      
+    - name: Build release (cross)
+      if: ${{ matrix.use_cross }}
+      run: cross build --release --target ${{ matrix.target }}
+
+    - name: Build release (cargo)
+      if: ${{ !matrix.use_cross }}
       run: cargo build --release --target ${{ matrix.target }}
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
         name: pacm-${{ matrix.target }}
-        path: target/${{ matrix.target }}/release/pacm*
+        path: |
+          target/${{ matrix.target }}/release/pacm
+          target/${{ matrix.target }}/release/pacm.exe
+          target/${{ matrix.target }}/release/pacm-shim
+          target/${{ matrix.target }}/release/pacm-shim.exe
+        if-no-files-found: ignore
 
   upload-to-release:
     name: Upload to Existing Release
