Aktualisieren von release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,7 +89,7 @@ jobs:
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: pacm-${{ matrix.target }}
+        name: ${{ matrix.target }}
         path: |
           target/${{ matrix.target }}/release/pacm
           target/${{ matrix.target }}/release/pacm.exe
