--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,7 @@ clap = { version = "4.5.47", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
-bincode = { version = "2.0.1", features = ["serde"] }
-bincode1 = { package = "bincode", version = "1.3", optional = false }
+rawbin = "1.0"
 sha2 = "0.10"
 hex = "0.4"
 camino = "1.1"
